--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
-<p>dashboard works!</p>
+<div class="d-flex h-100">
+    <app-sidebar style="min-width: 230px;"></app-sidebar>
+    <div class="d-flex flex-column p-3">
+        <h1>Inicio</h1>
+        <app-card></app-card>
+    </div>
+</div>
