--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,7 +8,7 @@
             <div class="form-group">
                 <label for="exampleFormControlSelect1">Tipo de documento</label>
                 <select class="form-control" formControlName="documentType">
-                    <option *ngFor="let documentType of documentTypes" [ngValue]="documentType.id">
+                    <option *ngFor="let documentType of documentTypes" [ngValue]="documentType.title">
                         {{documentType.title}}
                     </option>
                 </select>
