--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,37 +2,9 @@
     <div class="d-flex w-50 align-items-center justify-content-center left-container">
         Bienvenido a Unicomer
     </div>
-    <div class="d-flex flex-column w-50 align-items-center justify-content-between right-container">
-        <h1>Login</h1>
-        <form (ngSubmit)="submitForm()" [formGroup]="registerForm">
-            <div class="form-group">
-                <label for="exampleFormControlSelect1">Tipo de documento</label>
-                <select class="form-control" formControlName="documentType">
-                    <option *ngFor="let documentType of documentTypes" [ngValue]="documentType.title">
-                        {{documentType.title}}
-                    </option>
-                </select>
-              </div>
-            <div class="form-group">
-                <label for="formGroupExampleInput">Numero de documento</label>
-                <input type="text" formControlName="document" class="form-control" 
-                        [class.is-invalid]="registerForm.get('document').invalid
-                            && (registerForm.get('document').dirty || registerForm.get('document').touched || isSubmitted)">
-                <div *ngIf="registerForm.get('document').invalid
-                        && (registerForm.get('document').dirty || registerForm.get('document').touched || isSubmitted)" 
-                        class="invalid-feedback">
-                    Ingresar documento.
-                </div>    
-        </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Clave</label>
-                <input type="password"  formControlName="password" class="form-control"
-                        [class.is-invalid]="registerForm.get('password').invalid
-                            && (registerForm.get('password').dirty || registerForm.get('password').touched || isSubmitted)">
-            </div>
-            <button type="submit" class="btn btn-primary btn-sm w-100 mt-3">ingresar</button>
-        </form>
-        <div class="footer">
+    <div class="d-flex flex-column h-100 w-50 align-items-center justify-content-between right-container">
+        <app-form (formItemsSelected)="submitForm($event)"  class="w-75" [formItems]="formItems" [title]="formTitle" [button]="formButton"></app-form>
+        <div class="footer mb-4">
             ¿No tienes cuenta? Registrate aqui
         </div>
     </div>
